--- a/hackathon5.ipynb
+++ b/hackathon5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "import ml_metrics as metrics\n",
     "\n",
     "# eda\n",
-    "#from data_utils import describe, transformers\n",
+    "from data_utils import describe, transformers\n",
     "\n",
     "# visualization\n",
     "from matplotlib import pyplot as plt\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +133,11 @@
     "\n",
     "    users = make_users()\n",
     "    items = make_items()\n",
-    "dd\n",
-    "    users_ = read_array_from_csv(path, 'object', 0, delimdditer=\"\\t\")\n",
+    "\n",
+    "    #users_ = read_array_from_csv(path, 'object', 0, delimiter=\"\\t\")\n",
     "    items_ = read_array_from_csv(path, 'object', 1)\n",
     "\n",
-    "    rows = make_rows(users, users_)\n",
+    "    rows = make_rows(users)\n",
     "    cols = make_cols(items, items_)\n",
     "\n",
     "    nrows = users.shape[0]\n",
@@ -166,9 +166,10 @@
     "    return np.genfromtxt(path, dtype=dtype, skip_header=False, usecols=[column],\n",
     "                         delimiter=delimiter)\n",
     "\n",
-    "def make_rows(users, users_):\n",
-    "    rows = [np.argwhere(users == u)[0, 0] for u in users_]\n",
-    "    return np.array(rows)\n",
+    "def make_rows(users):\n",
+    "    rows = np.unique(users)\n",
+    "    #rows = [np.argwhere(users == u)[0, 0] for u in users_]\n",
+    "    return rows\n",
     "\n",
     "\n",
     "def make_cols(items, items_):\n",
@@ -183,6 +184,340 @@
    "outputs": [],
    "source": [
     "R = make_ratings(\"data/train_play_counts.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'SOAAADD12AB018A9DD'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = os.path.join('data', 'songs.txt')\n",
+    "items = read_array_from_csv(path, 'object', 0, delimiter=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With surprise\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_file(file, explore=False, delimeter=\" \", names=[]):\n",
+    "    ds = pd.read_csv(file, sep=delimeter, names=names, header=0)\n",
+    "    if explore:\n",
+    "        describe.describe_data(ds, file)\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Describing 'data/songs.txt'\n",
+      "type:  class 'pandas.core.frame.DataFrame'\n",
+      "shape:  (386212, 2)\n",
+      ".dtypes:\n",
+      "0. iid : object (total_values: 386212; values: -) (nans: 0) -------- Object!!\n",
+      "1. item_index : int64 (total_values: 386212; values: -) (nans: 0)\n",
+      "Total nans 0\n",
+      ".index.names:  [None]\n",
+      "Describing 'data/train_play_counts.txt'\n",
+      "type:  class 'pandas.core.frame.DataFrame'\n",
+      "shape:  (1450932, 3)\n",
+      ".dtypes:\n",
+      "0. uid : object (total_values: 110000; values: -) (nans: 0) -------- Object!!\n",
+      "1. iid : object (total_values: 163206; values: -) (nans: 0) -------- Object!!\n",
+      "2. totals : int64 (total_values: 299; values: -) (nans: 0)\n",
+      "Total nans 0\n",
+      ".index.names:  [None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = load_file(\"data/songs.txt\", explore=True, delimeter=\" \", names=[\"iid\", \"item_index\"])\n",
+    "ratings = load_file(\"data/train_play_counts.txt\", explore=True, delimeter=\"\\t\", names=[\"uid\", \"iid\", \"totals\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>iid</th>\n",
+       "      <th>totals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOEGIYH12A6D4FC0E3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOFLJQZ12A6D4FADA6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOHTKMO12AB01843B0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SODQZCY12A6D4F9D11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOXLOQG12AF72A2D55</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        uid                 iid  totals\n",
+       "0  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOEGIYH12A6D4FC0E3       1\n",
+       "1  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOFLJQZ12A6D4FADA6       1\n",
+       "2  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOHTKMO12AB01843B0       1\n",
+       "3  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SODQZCY12A6D4F9D11       1\n",
+       "4  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOXLOQG12AF72A2D55       1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = ratings.drop_duplicates()\n",
+    "items = items.drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 923)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rscale = (ratings.totals.min(),ratings.totals.max())\n",
+    "rscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prep_dataset(ratings, rscale):\n",
+    "    # A reader is still needed but only the rating_scale param is requiered.\n",
+    "    reader = Reader(rating_scale=rscale) # see df.col.hist()\n",
+    "\n",
+    "    # The columns must correspond to user id, item id and ratings (in that order).\n",
+    "    data = Dataset.load_from_df(ratings[['uid', 'iid', 'totals']], reader)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep_dataset(ratings, rscale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 7.004295561788455\n",
+      "mae: 2.909209271160712\n"
+     ]
+    }
+   ],
+   "source": [
+    "def baseline_cross_validate(data, bsl_options=None, cv=5):\n",
+    "    if not bsl_options:\n",
+    "        bsl_options = {'method': 'sgd', 'learning_rate': 0.00005, 'reg': 0.05}\n",
+    "    \n",
+    "    baseline = BaselineOnly(bsl_options=bsl_options)\n",
+    "    \n",
+    "    res = cross_validate(baseline, data, measures=['RMSE', 'MAE'], cv=cv, n_jobs=-1)\n",
+    "    print(\"rmse: %s\" % res[\"test_rmse\"].mean())\n",
+    "    print(\"mae: %s\" % res[\"test_mae\"].mean())\n",
+    "    return baseline, res\n",
+    "\n",
+    "\n",
+    "# You must decide whether or not to use a `Dataset` or a `Trainset`.\n",
+    "baseline, baseline_results = baseline_cross_validate(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimating biases using sgd...\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_predictions(algo, ratings_train):\n",
+    "    \n",
+    "    \n",
+    "    algo.fit(ratings_train)\n",
+    "    \n",
+    "    test_set = ratings_train.build_anti_testset()\n",
+    "    \n",
+    "    preds = algo.test(test_set)\n",
+    "    return algo, preds\n",
+    "\n",
+    "    \n",
+    "model, preds = make_predictions(baseline, data.build_full_trainset())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_n(predictions, n=500):\n",
+    "    '''Return the top-N recommendation for each user from a set of predictions.\n",
+    "\n",
+    "    Args:\n",
+    "        predictions(list of Prediction objects): The list of predictions, as\n",
+    "            returned by the test method of an algorithm.\n",
+    "        n(int): The number of recommendation to output for each user. Default\n",
+    "            is 10.\n",
+    "\n",
+    "    Returns:\n",
+    "    A dict where keys are user (raw) ids and values are lists of tuples:\n",
+    "        [(raw item id, rating estimation), ...] of size n.\n",
+    "    '''\n",
+    "\n",
+    "    # First map the predictions to each user.\n",
+    "    top_n = defaultdict(list)\n",
+    "    for uid, iid, true_r, est, _ in predictions:\n",
+    "        top_n[uid].append((iid, est))\n",
+    "\n",
+    "    # Then sort the predictions for each user and retrieve the k highest ones.\n",
+    "    for uid, user_ratings in top_n.items():\n",
+    "        user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
+    "        top_n[uid] = user_ratings[:n]\n",
+    "\n",
+    "    return top_n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_csv(top_n, filename=\"preds.csv\"):\n",
+    "    users = []\n",
+    "    for uid, recs in top_n.items():\n",
+    "        items = [rec[0] for rec in recs]\n",
+    "        urec = (uid, items)\n",
+    "        users.append(urec)\n",
+    "    # sort by user\n",
+    "    recommendations = sorted(users, key=lambda x: x[0])\n",
+    "    \n",
+    "    # do csv\n",
+    "    # User, songid songid \n",
+    "    s = \"User: \\n\"\n",
+    "    for rec in recommendations:\n",
+    "        user = str(rec[0])\n",
+    "        recs = \" \".join(str(r) for r in rec[1])\n",
+    "        s += \"{user},{recs}\\n\".format(user=user, recs=recs)\n",
+    "    #print(s)\n",
+    "    with open(filename,'w') as f:\n",
+    "        f.write(s)\n",
+    "    return recommendations"
    ]
   },
   {
