--- a/hackathon5.ipynb
+++ b/hackathon5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Explore"
    ]
@@ -46,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -100,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -126,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def make_ratings(path):\n",
@@ -180,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "R = make_ratings(\"data/train_play_counts.txt\")"
@@ -189,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -216,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,41 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Describing 'data/songs.txt'\n",
-      "type:  class 'pandas.core.frame.DataFrame'\n",
-      "shape:  (386212, 2)\n",
-      ".dtypes:\n",
-      "0. iid : object (total_values: 386212; values: -) (nans: 0) -------- Object!!\n",
-      "1. item_index : int64 (total_values: 386212; values: -) (nans: 0)\n",
-      "Total nans 0\n",
-      ".index.names:  [None]\n",
-      "Describing 'data/train_play_counts.txt'\n",
-      "type:  class 'pandas.core.frame.DataFrame'\n",
-      "shape:  (1450932, 3)\n",
-      ".dtypes:\n",
-      "0. uid : object (total_values: 110000; values: -) (nans: 0) -------- Object!!\n",
-      "1. iid : object (total_values: 163206; values: -) (nans: 0) -------- Object!!\n",
-      "2. totals : int64 (total_values: 299; values: -) (nans: 0)\n",
-      "Total nans 0\n",
-      ".index.names:  [None]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "items = load_file(\"data/songs.txt\", explore=True, delimeter=\" \", names=[\"iid\", \"item_index\"])\n",
-    "ratings = load_file(\"data/train_play_counts.txt\", explore=True, delimeter=\"\\t\", names=[\"uid\", \"iid\", \"totals\"])"
+    "items = load_file(\"data/songs.txt\", explore=False, delimeter=\" \", names=[\"iid\", \"item_index\"])\n",
+    "ratings = load_file(\"data/train_play_counts.txt\", explore=False, delimeter=\"\\t\", names=[\"uid\", \"iid\", \"totals\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +326,7 @@
        "4  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOXLOQG12AF72A2D55       1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +347,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_users = load_file(\"data/test_users.csv\", explore=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>000b22f91d4992dba3a80025493059f972a7850e</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>001eed159e8a038e5c5c63fe439ea5acead124f4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>002326a7a9e649b172765be1fe733826d7995461</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [000b22f91d4992dba3a80025493059f972a7850e, 001eed159e8a038e5c5c63fe439ea5acead124f4, 002326a7a9e649b172765be1fe733826d7995461]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_users[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>iid</th>\n",
+       "      <th>totals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOEGIYH12A6D4FC0E3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOFLJQZ12A6D4FADA6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOHTKMO12AB01843B0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SODQZCY12A6D4F9D11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fd50c4007b68a3737fe052d5a4f78ce8aa117f3d</td>\n",
+       "      <td>SOXLOQG12AF72A2D55</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        uid                 iid  totals\n",
+       "0  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOEGIYH12A6D4FC0E3       1\n",
+       "1  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOFLJQZ12A6D4FADA6       1\n",
+       "2  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOHTKMO12AB01843B0       1\n",
+       "3  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SODQZCY12A6D4F9D11       1\n",
+       "4  fd50c4007b68a3737fe052d5a4f78ce8aa117f3d  SOXLOQG12AF72A2D55       1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keep_only_interesting_users(ratings, users):\n",
+    "    users_with_songs = ratings.groupby('uid').totals.sum()\n",
+    "    users_with_songs = users_with_songs[users_with_songs > 50]\n",
+    "    return ratings[ np.array([element in users_with_songs.index for element in ratings.uid])  | np.array([element in users.index for element in ratings.uid])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_filtered = keep_only_interesting_users(ratings,test_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,19 +527,19 @@
        "(1, 923)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rscale = (ratings.totals.min(),ratings.totals.max())\n",
+    "rscale = (ratings_filtered.totals.min(),ratings.totals.max())\n",
     "rscale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,31 +554,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep_dataset(ratings, rscale)"
+    "data = prep_dataset(ratings_filtered, rscale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rmse: 7.004295561788455\n",
-      "mae: 2.909209271160712\n"
+      "rmse: 9.816257392567772\n",
+      "mae: 4.39922794048074\n"
      ]
     }
    ],
    "source": [
     "def baseline_cross_validate(data, bsl_options=None, cv=5):\n",
     "    if not bsl_options:\n",
-    "        bsl_options = {'method': 'sgd', 'learning_rate': 0.00005, 'reg': 0.05}\n",
+    "        bsl_options = {'method': 'sgd', 'learning_rate': 0.001, 'reg': 0.05}\n",
     "    \n",
     "    baseline = BaselineOnly(bsl_options=bsl_options)\n",
     "    \n",
@@ -445,18 +606,21 @@
     }
    ],
    "source": [
-    "def make_predictions(algo, ratings_train):\n",
+    "def make_predictions(algo, ratings_train, test_users):\n",
     "    \n",
     "    \n",
     "    algo.fit(ratings_train)\n",
     "    \n",
     "    test_set = ratings_train.build_anti_testset()\n",
+    "    #uuid, iid, fill\n",
+    "    test = [item for item in test_set if item[0] in list(test_users.index)]\n",
     "    \n",
-    "    preds = algo.test(test_set)\n",
+    "    \n",
+    "    preds = algo.test(test)\n",
     "    return algo, preds\n",
     "\n",
     "    \n",
-    "model, preds = make_predictions(baseline, data.build_full_trainset())"
+    "model, preds = make_predictions(baseline, data.build_full_trainset(), list(test_users))"
    ]
   },
   {
